# fast-lms

./: alembic.ini  docker-compose.yml  main.py  manage.sh  pyproject.toml  settings.py
compus/: models.py  schemes.py  views.py
core/: base.py  base_migrate.py  database.py
migrations/: env.py
migrations/versions/: 1e298972220f_init_database.py  af32c53cd0d6_init_database.py
